# obligation-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  start.sh  start_driver.sh
.claude/skills/code-review/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/model/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/service/: SKILL.md
.claude/skills/test/: SKILL.md
.opencode/commands/: code-review.md  fix.md  model.md  plan.md  research.md  service.md  test.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-infrastructure/: 01-01-PLAN.md  01-RESEARCH.md
.planning/phases/07-strip-primary-analysis-and-idempotent-bond-refresh/: 07-01-PLAN.md  (+3 more)
ai/: context.md  workflow.md
ai/docs/: async-patterns.md  code-style.md  error-handling.md  module-architecture.md  testing-guidelines.md
ai/plans/: 2026-05-17-postgres-integration.md
ai/research/: postgres-integration.md
migrations/: 001_create_crawler_schema.sql  002_idempotent_bonds_and_price_history.sql
src/: config.rs  database.rs  error.rs  main.rs
src/api/: bonds.rs  mod.rs
src/controllers/: bonds_crawler.rs  mod.rs
src/models/: bonds.rs  mod.rs  rabbitmq.rs
src/repository/: bonds_repository.rs  mod.rs
src/services/: bonds_crawler.rs  mod.rs  opencode_service.rs  rabbitmq_consumer.rs  rabbitmq_producer.rs
src/shared/: utils.rs
