[package]
name = "obligation-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.30", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.0"
regex = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thirtyfour = "0.32.0"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
thiserror = "1.0.56"
log = "0.4.20"
reqwest = "0.12.2"
urlencoding = "2.1.3"
csv = "1.3.1"
lapin = "3.7.0"
futures-util = "0.3.31"
futures = "0.3.31"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

[dev-dependencies]
time = "0.3.36"
